fix(dropdown): ajuste de contraste do label no tema dark
fixes DTHFUI-12941

--- a/src/css/components/po-listbox/po-listbox.css
+++ b/src/css/components/po-listbox/po-listbox.css
@@ -135,7 +135,6 @@ po-listbox[p-size='small'] .po-listbox-group-header i {
 
 .po-listbox-dropdown .po-item-list:not(.po-item-list__disabled) {
   border-radius: var(--border-radius-md);
-  color: var(--color-brand-01-base);
 }
 
 po-listbox[p-size='small'] .po-listbox-dropdown .po-item-list {
